<resources>
    <string name="app_name">Biyoex</string>
    <string name="isdownLoding">正在下载新版本…</string>
    <string name="downloadDone">下载完成</string>
    <string name="downloadfail">下载失败</string>
    <string name="packageName">com.vbt.app</string>
    <string name="search_coin">搜索币种</string>
    <string name="history_search">最近查看</string>
    <string name="jump">跳过</string>
    <string name="colon">：</string>
    <string name="confirm">确定</string>
    <string name="money">￥</string>
    <string name="money_unit">CNY</string>
    <string name="language">语言</string>
    <string name="coin">币种</string>
    <string name="coin_home">币种交易对</string>
    <string name="order_status">订单状态</string>
    <string name="complete">完成</string>
    <string name="loading">加载中...</string>
    <string name="no_data">暂无数据</string>
    <string name="click_refresh">点击刷新</string>
    <string name="cancel">取消</string>
    <string name="qr_scan">二维码/条形码扫描</string>
    <string name="please_input">请输入</string>
    <string name="not_vip">非会员</string>
    <string name="not_bind">您还没绑</string>
    <string name="already_regist">账号已被注册</string>
    <string name="hint_message">提示信息</string>
    <string name="permission_refuse">当前应用缺少必要权限，该功能暂时无法使用。如若需要，请单击【确定】按钮前往设置中心进行权限授权。</string>
    <string name="confirm_cancel_entrust">您确定取消本次委托吗？</string>
    <string name="confirm_clean_cache">确定清除缓存吗？</string>
    <string name="clean_cache_success">已成功清空缓存</string>
    <string name="confirm_logout">您确定要退出登录吗？</string>
    <string name="no_slide_code">请完成滑动验证</string>
    <string name="illegal_charaters">不能含有非法字符</string>
    <string name="draw_bottom_dialog">我们已向您绑定的手机或者邮箱发送了验证码</string>
    <string name="unbindgoogle">解除谷歌绑定</string>
    <string name="input_certify_code">请输入验证码</string>
    <string name="pic_code_error">图形验证码错误！</string>
    <string name="wrong_phone_or_email">不是正确的手机或邮箱</string>
    <string name="account_not_exit">账号不存在</string>
    <string name="contact_admin">已被禁用，联系管理员</string>
    <string name="illegal_opera">非法操作</string>
    <string name="send_code_error">发送验证码失败</string>
    <string name="code_not_send">验证码未发送</string>
    <string name="opera_too_much">操作频繁，2小时候再试</string>
    <string name="send_code_too_much">验证码发送次数过多</string>
    <string name="code_error">验证码不正确</string>
    <string name="code_empty">验证码为空</string>
    <string name="net_error">网络异常,请稍后重试</string>
    <string name="get_code">获取验证</string>
    <string name="unusual_login_code">异常登录验证码</string>
    <string name="not_usual_login_need_certify">非常用设备登录，我们需要验证你的身份 我们已发送短信至</string>
    <string name="please_input_code">请填写验证码</string>
    <string name="email_code">邮箱验证码</string>
    <string name="message_code">短信验证码</string>
    <string name="already_send_code_to">我们已发送验证码至</string>
    <string name="message_min_volume">最小交易数量为：</string>
    <string name="message_min_amount">最小总额为：</string>
    <string name="message_max_amount">最大交易额限制：</string>
    <string name="message_not_open_trade">未开放交易</string>
    <string name="message_not_trade_time">不在交易时间！</string>
    <string name="message_not_enough_balance">余额不足！</string>
    <string name="message_trade_pass_empty">交易密码不能为空</string>
    <string name="message_pass_error">密码错误</string>
    <string name="message_wallet_exception">用户钱包异常</string>
    <string name="message_trade_price_error">交易价格超出限定范围！</string>
    <string name="trade_amount">交易额</string>
    <string name="no_sdcard">无SD卡，请插入SD卡</string>
    <string name="net_not_work">当前网络不可用，请检查网络</string>
    <string name="confirm_delete_message">您确定要删除该条记录吗？</string>
    <string name="delete_failed">删除失败</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">手机号/邮箱</string>
    <string name="phone_email">请输入您的邮箱/手机号</string>
    <string name="password">密码</string>
    <string name="password_hint">8~20位字母和数字</string>
    <string name="forget_password">忘记密码</string>
    <string name="copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="username_can_not_empty">用户名不能为空</string>
    <string name="password_empty">密码为空</string>
    <string name="relogin">登录失败，请重新登录</string>
    <string name="account_exception">账户出现安全隐患被冻结，请尽快联系客服</string>
    <string name="login_failed_remain_time">用户名或密码错误,剩余次数%s</string>
    <string name="pass_error_too_many_times">密码错误次数过多被限制登录</string>
    <string name="login_success">登录成功</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="please_draw_passwrod">请绘制手势密码</string>
    <string name="switch_password">切换密码登录</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="password_regex">密码8~20位，且为字母、数字、符号等任意2种以上组合</string>
    <string name="repeat_password">请再次输入新密码</string>
    <string name="password_is_not_same">两次新密码不一致</string>
    <string name="already_register">已经注册?</string>
    <string name="repeat_login_pass">确认登录密码</string>
    <string name="invite_id">邀请ID</string>
    <string name="invite_retrun">邀请返佣</string>
    <string name="no_need_input">(非必填)</string>
    <string name="must_input">(必填)</string>
    <string name="invite_code_no_necessary">邀请码，没有可不填</string>
    <string name="regist_means_agree">点击“注册”即表示您已同意VBT.cc</string>
    <string name="account_format_error">手机号或者邮箱格式错误</string>
    <string name="please_repeat_pass">请再次输入密码</string>
    <string name="password_not_same">两次输入密码不一致</string>
    <string name="risk_hint">风险提示</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="regist_success">注册成功</string>
    <string name="account_already_regist">账号已被注册</string>
    <string name="certify_error_remains">验证错误，您还有%s次机会</string>
    <string name="unknown_error">未知错误</string>
    <string name="input_phone_email">请输入手机号或邮箱</string>
    <string name="input_least_ten_words">描述最少为10个字</string>
    <string name="go_register">没有账号?去注册</string>
    <string name="go_login">已有账号,去登录</string>
    <string name="register_code">短信验证码</string>
    <string name="please_code">请输入验证码</string>
    <string name="please_invite_code">请输入邀请码</string>
    <string name="coin_unselect_fous">已添加</string>
    <string name="coin_normal_fous">添加\n自选</string>
    <string name="welcome_app">欢迎您来到BY</string>
    <string name="exit_app">再按一次返回键退出BY</string>
    <string name="zgtop_protocol">服务条款</string>
    <string name="confirm_the_protocol">需同意《BY》协议才能进行注册</string>
    <string name="send_sms_success">发送验证码成功</string>
    <string name="Gesture_login_failed">手势登录失败</string>
    <string name="detail">详情</string>
    <string name="resend">重新发送</string>
    <string name="my_invite_code">我的邀请码:</string>
    <string name="share_web">分享链接</string>
    <string name="invite_record">邀请记录</string>
    <string name="invite_reward_record">邀请收益记录</string>
    <string name="toshare">分享到</string>
    <string name="wechat_friend">转发好友</string>
    <string name="wechat_friends">朋友圈</string>
    <string name="save_zxing">保存图片</string>
    <string name="my_zxing">我的二维码</string>
    <string name="create_http">生成链接</string>
    <string name="my">我的</string>
    <string name="regist_login">登录/注册</string>
    <string name="recharge">充币</string>
    <string name="withdraw">提币</string>
    <string name="invite">注册邀请</string>
    <string name="entrust_manager">委托管理</string>
    <string name="my_asset">我的资产</string>
    <string name="security_center">安全中心</string>
    <string name="extension_statistics">推广统计</string>
    <string name="announcement">公告</string>
    <string name="office_announcement">官方公告</string>
    <string name="announcement_detail">公告详情</string>
    <string name="help_detail">帮助详情</string>
    <string name="help_center">帮助中心</string>
    <string name="invite_code">邀请码</string>
    <string name="invite_fired">邀请好友</string>
    <string name="invite_info">邀请好友注册实名享受50%手续费返佣</string>
    <string name="my_vip">BY合伙人</string>
    <string name="my_order">我的订单</string>
    <string name="up_insue">提交工单</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_us">关于我们</string>
    <string name="setting_language">设置语言</string>
    <string name="exit">退出登录</string>
    <string name="create_log">生成日志</string>
    <string name="logout_failed">退出登录失败</string>
    <string name="version">版本</string>
    <string name="not_permissmon">未授职权限，不能完成此操作</string>
    <string name="indication_of">注明：</string>
    <string name="upload_pic_tips">①所传证件照文字信息需清晰可见 ②保持证件靠近镜头，需露出人脸 ③上传单张照片大小限制为4M，格式为jpg/jpeg</string>
    <string name="invite_reward">累计邀请奖励</string>
    <string name="invite_detail">邀请明细</string>
    <string name="man">人</string>
    <string name="invite_human_number">邀请人数</string>
    <string name="real_name_number">实名人数</string>
    <string name="message_detail">消息详情</string>
    <string name="nick_name">昵称</string>
    <string name="check_pic">查看图片</string>
    <string name="reupload">重新上传</string>
    <string name="certification">实名认证</string>
    <string name="id_card">身份证</string>
    <string name="passport">护照</string>
    <string name="input_cardholder_name">请输入持卡人姓名</string>
    <string name="input_id_card_number">请输入证件号</string>
    <string name="wrong_id_card_number">身份证号不正确</string>
    <string name="save_success">保存成功</string>
    <string name="id_already_used">身份已被使用</string>
    <string name="save_failed">保存失败，请联系管理员</string>
    <string name="certificate_type">证件类型</string>
    <string name="name">姓名</string>
    <string name="card_number">证件号</string>
    <string name="upload_certificates">高级认证</string>
    <string name="upload_files_exceeded">上传文件超过</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败</string>
    <string name="certified">已认证</string>
    <string name="go_certify">去认证</string>
    <string name="go_upload">去上传</string>
    <string name="to_be_audited">待审核</string>
    <string name="already_passed">已通过</string>
    <string name="please_certify_first">请先实名认证</string>
    <string name="under_review">正在审核中..</string>
    <string name="google_certify">谷歌验证</string>
    <string name="google_operat_step">操作步骤<br /><br /><br />
                1、登录安卓应用商店或利用手机浏览器搜索下载APP。<br /><br />
                2、请将16位密钥记录在纸上，并保存在安全的地方。如遇手机丢失，你可以通过该密钥恢复你的谷歌验证。<br /><br />
                3、将该16位密钥手动输入或粘贴到谷歌验证APP中。<br /><br />
                4、将谷歌验证器APP中生成的6位数字验证码填到上方的验证码框中，点击。</string>
    <string name="close_google_certify">关闭谷歌验证</string>
    <string name="open_google_certify">开启谷歌验证</string>
    <string name="input_login_password">请输入登录密码</string>
    <string name="input_google_code">请输入谷歌验证码</string>
    <string name="trade_password">交易密码</string>
    <string name="address_payment_hint">请输入PaymentID(选填)</string>
    <string name="transfer_account">转账</string>
    <string name="transfer_account_info">请注意您的资金安全</string>
    <string name="transfer_address">请输入您要转账的UID</string>
    <string name="transfer_number">请输入转账数量</string>
    <string name="add_address">请添加USDT-ERC20地址</string>
    <string name="buy">买入</string>
    <string name="kill_order">撤单</string>
    <string name="entrust_price">价格</string>
    <string name="entrust_volume">数量</string>
    <string name="time">时间</string>
    <string name="zhanbi">占比</string>
    <string name="transfer_label">标签</string>
    <string name="address_alias">请输入标签</string>
    <string name="address">地址</string>
    <string name="recharge_hint">Payment ID</string>
    <string name="buy_sell">买/卖</string>
    <string name="price">单价</string>
    <string name="number">数量</string>
    <string name="input_trade_pass">输入交易密码</string>
    <string name="send_certify_code">发送验证码</string>
    <string name="sure">确认</string>
    <string name="burn_tips"> </string>
    <string name="contract_address">合约地址：</string>
    <string name="destory_total">燃烧总量：</string>
    <string name="real_destory_total">销毁总量：</string>
    <string name="burn_depth">注：做市成交量除外,每月1日链上销毁；</string>
    <string name="burn_rate">燃烧费率:</string>
    <string name="share_total">分红总量：</string>
</resources>