<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    tools:context=".market.fragment.BurnFragment">
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
          android:id="@+id/textView17"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:text="@string/destory_total"
          android:textColor="@color/colorBlack"
          android:textSize="13sp"
          android:layout_marginLeft="15dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/tv_share_total"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/share_total"
          android:textColor="@color/colorBlack"
          android:textSize="13sp"
          android:visibility="gone"
          app:layout_constraintStart_toStartOf="@+id/textView17"
          android:layout_marginTop="15dp"
          app:layout_constraintTop_toBottomOf="@+id/textView17" />
      <TextView
          android:layout_width="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/tv_share_total"
          app:layout_constraintLeft_toLeftOf="@id/tv_share_total"
          android:id="@+id/tv_real_destory"
          android:layout_marginTop="15dp"
          android:textColor="@color/colorBlack"
          android:textSize="13sp"
          android:text="@string/real_destory_total"
          android:layout_height="wrap_content"/>


      <TextView
          android:layout_width="wrap_content"
          android:text="@string/burn_rate"
          app:layout_constraintTop_toBottomOf="@id/tv_real_destory"
          app:layout_constraintLeft_toLeftOf="@id/tv_real_destory"
          android:layout_marginTop="15dp"
          android:id="@+id/tv_burn_rate"
          android:textColor="@color/colorBlack"
          android:textSize="13sp"
          android:layout_height="wrap_content"/>

      <TextView
          android:id="@+id/textView18"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:text="@string/contract_address"
          android:textColor="@color/colorBlack"
          android:textSize="13sp"
          app:layout_constraintStart_toStartOf="@+id/tv_burn_rate"
          app:layout_constraintTop_toBottomOf="@+id/tv_burn_rate" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/burn_tips"
          android:textSize="13sp"
          android:layout_marginRight="10sp"
          android:textColor="@color/colorBlack"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="@+id/textView17" />
      <TextView
          android:id="@+id/tv_contract_address"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="13sp"
          android:textColor="@color/blue_to_weak"
          app:layout_constraintStart_toEndOf="@+id/textView18"
          app:layout_constraintTop_toTopOf="@+id/textView18" />
      <TextView
          android:layout_marginTop="15dp"
          android:text="@string/burn_depth"
          android:paddingEnd="15dp"
          app:layout_constraintLeft_toLeftOf="@id/textView18"
          app:layout_constraintTop_toBottomOf="@id/tv_contract_address"
          app:layout_constraintRight_toRightOf="parent"
          android:id="@+id/tv_burn_depth"
          android:textSize="13sp"
          android:textColor="@color/colorBlack"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>