<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".property.TransferAccountActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="35dp"
        android:scaleType="center"
        android:src="@mipmap/arrow_back" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer_account"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/transfer_account_info"
            android:textColor="@color/login_yellow"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="UID"
        android:textColor="@color/textBlack" />

    <EditText
        android:id="@+id/edit_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:hint="@string/transfer_address"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/line_eee" />

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/number"
            android:textColor="@color/textBlack" />

        <TextView
            android:id="@+id/tv_user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="可用"
            android:textColor="@color/textBlack"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_transfer_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/transfer_number"
            android:inputType="numberDecimal"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_coin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="VBTNEW" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/line_eee" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/trade_password"
        android:textColor="@color/textBlack" />

    <EditText
        android:id="@+id/edit_trade_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:hint="@string/input_trade_pass"
        android:inputType="textPassword"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/line_eee" />

    <TextView
        android:id="@+id/tv_verification_code"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:text="验证码"
        android:textColor="@color/text_black_to_middle"
        android:textSize="14sp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:visibility="visible">


        <EditText
            android:id="@+id/ed_verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_send_code"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_certify_code"
            android:inputType="number"
            android:textColor="@color/text_normal"
            android:textColorHint="@color/text_weak_light"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:text="@string/send_certify_code"
            android:textColor="@color/login_yellow"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_eee" />

    <LinearLayout
        android:id="@+id/rl_google_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"

            android:text="@string/google_certify"
            android:textColor="@color/text_black_to_middle"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ed_google_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_google"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/input_google_code"
            android:inputType="number"
            android:textColor="@color/text_normal"
            android:textColorHint="@color/text_weak_light"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="10dp"
        android:background="@color/login_yellow"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>