<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/layout_newtitle_bar"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/transfer_label"
        android:layout_margin="16dp"
        android:textColor="@color/textBlack"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@null"
        android:textSize="15sp"
        android:hint="@string/address_alias"
        android:layout_height="40dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/line_color"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/address"
        android:layout_margin="16dp"
        android:textColor="@color/textBlack"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@null"
        android:textSize="15sp"
        android:hint="@string/add_address"
        android:layout_height="40dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/line_color"/>

    <Button
        android:layout_width="200dp"
        android:background="@color/login_yellow"
        android:text="确认"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_height="40dp" />
</LinearLayout>