<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:textSize="16sp"
            android:textColor="@color/price_green"
            android:id="@+id/tv_entrust_type"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_normal"
            android:layout_marginLeft="64dp"
            android:textStyle="bold"
            android:textSize="14sp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/kill_order"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tv_cancel"
            android:background="@drawable/layout_recharge_copy_bg"
            android:visibility="visible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:id="@+id/tv_status"
            android:textColor="@color/commonBlue"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entrust_price"
            android:textSize="13sp"
            android:textColor="@color/text_weak_light"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entrust_volume"
            android:textSize="13sp"
            android:textColor="@color/text_weak_light"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/zhanbi"
            android:textSize="13sp"
            android:gravity="right"
            android:textColor="@color/text_weak_light"/>

    </LinearLayout>
</LinearLayout>